# backend

./: .env.sample  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml
docs/: README.md
src/: settings.py
src/common/: __init__.py  exceptions.py  shared.py
src/database/: database.py
src/entrypoints/rest/: server.py
src/entrypoints/rest/routers/: __init__.py  health.py  historical.py  insight.py  user.py
src/entrypoints/rest/schemas/: health.py  historical.py  insight.py  shared.py  user.py
src/historical/: aggregator.py  classifier.py  repository.py  service.py
src/historical/domain/: __init__.py  mapper.py  model.py
src/insight/: __init__.py  service.py
src/insight/domain/: __init__.py  mapper.py  model.py
src/mcp_server/: __init__.py  mcp_server.py  settings.py
src/mcp_server/entrypoints/: __init__.py  http_main.py
src/services/: __init__.py  ai_service.py
src/user/: __init__.py  mapper.py  model.py  repository.py  service.py
src/user/domain/: __init__.py  mapper.py  model.py
