[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Federico Gualdi",email = "federicogualdi98@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli] (>=0.121.1,<0.122.0)",
    "beanie (>=2.0.0,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]


[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.17"
pre-commit = "^4.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
